<resources>
    <string name="app_name">PCNotifications</string>
    <string name="show_name">PC Notifications</string>
    <string name="service_name">PC Notifications</string>
    <string name="service_description">Enable this service to send notifications to your PC.</string>
    <string name="title_activity_main">PC Notifications</string>

    <string name="hello_world">Hello world!</string>

    <string name="open_system_settings">Open Settings</string>
    <string name="button_test">Test</string>
    <string name="tab_setup">SETUP</string>
    <string name="tab_apps">APPS</string>
    <string name="tab_history">HISTORY</string>
    <string name="apps_tip">This is a tip</string>

    <string name="text_setup_code_title">1. Code Setting</string>
    <string name="text_setup_code_description">Setting code to identify who you are.</string>
    <string name="text_setup_key_title">2. Key</string>
    <string name="text_setup_key_description">Set a key to encrypt your notifications.</string>
    <string name="text_setup_access_title">3. Notification Access</string>
    <string name="text_setup_access_description">Enable <b>PC Notifications</b> in the Notification Access settings</string>
    <string name="text_setup_pc_title">4. PC Client</string>
    <string name="text_setup_pc_description">Install browser extension on pc.\n\nhttp://somewhere/</string>
    <string name="text_setup_test_title">5. Test</string>
    <string name="text_setup_test_description">Press the button below to create a test notification.</string>
</resources>